# human_detection_project

./: .gitattributes  .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_gpu.txt
src/: app.py  client.py  service.py
src/configs/: service_config.json
src/models/detectors/: yolo11m.onnx  yolo11n-pose.onnx  yolo11n.onnx  yolo11s.onnx  yolo8n.onnx  yolo8nv2.onnx
src/models/detectors/trained models/: yolo11m-pose-100epochs.onnx  yolo11m-pose-100epochs.pt  yolo11m-pose.onnx  yolo11n-pose.onnx  yolo11x-pose-100epochs.onnx  yolo11x-pose-100epochs.pt  yolo8m-pose-80epochs.onnx  yolo8n-pose-120epochs.onnx  yolo8s-pose-2.onnx  yolo8s-pose.onnx
src/routers/: yolo_model_class.py
src/routers/api_background_description/: router.py
src/routers/api_check_model_loaded/: router.py
src/routers/api_get_classes_info/: router.py
src/routers/api_inference_image/: router.py
src/routers/api_inference_video/: router.py
src/routers/api_info/: router.py
src/routers/api_interface_image/: router.py
src/routers/api_load_models/: router.py
src/routers/api_video_detection/: router.py
src/routers/api_video_interface/: router.py
src/schemas/: service_config.py  service_output.py
src/tools/: logging_health.py  logging_tools.py
