[project]
name = "human-detection-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "fastapi[standard]>=0.115.12",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "pillow>=11.1.0",
    "ultralytics>=8.3.98",
]
